= filerenamer Changelog

== Master (for 0.0.7)

== Version 0.0.6 [2013-04-18] released
* Add --unite option to bin/classify, which unite t and T into T.
* Adjust to builtinextension-0.1.0.

== Version 0.0.5
* Bugfix bin/classify
* Add bin/rentime

== Version 0.0.4
* Add renhash
* Rename bin/classify1stchar to bin/classify
* Add function to bin/classify
  * Japanese-yomi is indicated to be option.
  * Shorten filename; e.g., abc -> a/bc.
  * Indicating directory name length; e.g., abc -> ab/abc.

== Version 0.0.3
* Restruct class and module name
* Add bin/renpad

== Version 0.0.2
* Command name changes; rensub, rennum, etc
* Add bin/renpar

== Version 0.0.1
* bin/classifyWith1stChar to classify1stchar and add function of kanji kana inversion using kakasi

== Version 0.0.0

* Initial release
